--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(run_split_pipe)
 import(ComplexHeatmap)
 import(DropletUtils)
 import(Matrix)
+import(RColorBrewer)
 import(ShortRead)
 import(SingleCellExperiment)
 import(circlize)
