--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,11 @@
 Package: splitRtools
 Title: Processes split-seq data for downstream analysis
-Version: 0.0.1.0
+Version: 0.0.1.1
 Authors@R: 
     person("James", "Opzoomer", , "james.opzoomer@gmail.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
+           comment = c(ORCID = "0000-0001-6842-756X"))
 Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: use_mit_license()
 Encoding: UTF-8
 LazyData: true
 Depends:
