--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,6 +23,7 @@ Imports:
   ComplexHeatmap,
   circlize,
   RColorBrewer,
-  Matrix
+  Matrix,
+  singleCellTK
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
