--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,7 @@ Version: 0.0.1.1
 Authors@R: 
     person("James", "Opzoomer", , "james.opzoomer@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0001-6842-756X"))
-Description: What the package does (one paragraph).
+Description: A collection of tools to generate a pre-processing pipeline for split-seq scRNA-seq data.
 License: use_mit_license()
 Encoding: UTF-8
 LazyData: true
@@ -23,7 +23,6 @@ Imports:
   ComplexHeatmap,
   circlize,
   RColorBrewer,
-  Matrix,
-  singleCellTK
+  Matrix
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.0
