--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,3 +26,6 @@ Imports:
   Matrix
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
